Crypto: Accelerator mbedtls config refinement
PSA_WANT_XXX is defined in config_psa.h which is after mbedtls_config.h.

Signed-off-by: Summer Qin <summer.qin@arm.com>
Change-Id: I73045cc652e1fa03508cf20223656f4d98999cb5

--- a/platform/ext/accelerator/cc312/CMakeLists.txt
+++ b/platform/ext/accelerator/cc312/CMakeLists.txt
@@ -218,6 +218,11 @@ if (TFM_PARTITION_CRYPTO)
             $<$<BOOL:${CC312_LEGACY_DRIVER_API_ENABLED}>:CC312_LEGACY_DRIVER_API_ENABLED>
     )
 
+    target_include_directories(psa_crypto_config
+        INTERFACE
+            ${CMAKE_CURRENT_SOURCE_DIR}
+    )
+
     target_compile_options(crypto_service_cc312
         PUBLIC
             $<$<C_COMPILER_ID:GNU>:-Wno-unused-parameter>
