Build: Merge tfm_ns_interface to tfm_api_ns
Change-Id: I1c88efcea1b9ff0d35da613fb2329cd579d64a68
Signed-off-by: Kevin Peng <kevin.peng@arm.com>

--- a/platform/ns/CMakeLists.txt
+++ b/platform/ns/CMakeLists.txt
@@ -30,7 +30,7 @@ target_link_libraries(platform_ns
         platform_common_interface
         platform_region_defs
         tfm_fih_headers
-        tfm_ns_interface
+        tfm_api_ns
 )
 
 target_compile_definitions(platform_ns
