BL1: Make and store boot measurements
Adds measurement of the following BL1_2 and BL2 stages to BL1_1 and
BL1_2 respectively. Stores them in the shared boot data area with
metadata for retrieval at runtime.

Co-authored-by: David Vincze <david.vincze@arm.com>
Signed-off-by: Jamie Fox <jamie.fox@arm.com>
Change-Id: I29904dae8a17a9769132493b65bd6994a3d25446

--- a/bl1/bl1_1/CMakeLists.txt
+++ b/bl1/bl1_1/CMakeLists.txt
@@ -42,6 +42,7 @@ target_link_libraries(bl1_1
 target_compile_definitions(bl1_1
     PRIVATE
         $<$<BOOL:${TEST_BL1_1}>:TEST_BL1_1>
+        $<$<BOOL:${CONFIG_TFM_BOOT_STORE_MEASUREMENTS}>:CONFIG_TFM_BOOT_STORE_MEASUREMENTS>
 )
 
 target_share_symbols(bl1_1 ${BL1_SHARED_SYMBOLS_PATH})
