Build: Remove ABSOLUTE address indication expression
Remove ABSOLUTE address indication expression since it may cause
conflicts when linker places some input sections which are not
explicitly specified in linker script.

Signed-off-by: Summer Qin <summer.qin@arm.com>
Change-Id: Ic046ac02b3f1aa9bd09bef68a001ffaab4f43637

--- a/platform/ext/common/gcc/tfm_isolation_l3.ld.template
+++ b/platform/ext/common/gcc/tfm_isolation_l3.ld.template
@@ -272,10 +272,11 @@ SECTIONS
     /**** Base address of secure data area */
     .tfm_secure_data_start :
     {
-        . = ABSOLUTE(S_DATA_START) ;
+        /* Relocate current position to RAM */
+        . = ALIGN(4);
     } > RAM
 
-   /* Position tag */
+    /* Position tag */
     . = ALIGN(TFM_LINKER_PT_PRIV_RWZI_ALIGNMENT);
     Image$$PT_PRIV_RWZI_START$$Base = .;
 
