Build: Unify isolation level setting with TFM_ISOLATION_LEVEL
There is a CMake configuration "TFM_ISOLATION_LEVEL", which can also be
used as the CMake compile definition. To make the code easier to
maintain, remove current compile definition "TFM_LVL" and unify the
isolation level setting with "TFM_ISOLATION_LEVEL".

Signed-off-by: Xinyu Zhang <xinyu.zhang@arm.com>
Change-Id: I659744b470e8da6f14457094402e45cf77964406

--- a/interface/CMakeLists.txt
+++ b/interface/CMakeLists.txt
@@ -41,7 +41,7 @@ target_link_libraries(psa_interface
 target_compile_definitions(psa_interface
     INTERFACE
         $<$<BOOL:${CONFIG_TFM_ENABLE_CTX_MGMT}>:CONFIG_TFM_ENABLE_CTX_MGMT>
-        $<$<BOOL:${TFM_ISOLATION_LEVEL}>:TFM_LVL=${TFM_ISOLATION_LEVEL}>
+        $<$<BOOL:${TFM_ISOLATION_LEVEL}>:TFM_ISOLATION_LEVEL=${TFM_ISOLATION_LEVEL}>
         $<$<BOOL:${CONFIG_TFM_USE_TRUSTZONE}>:CONFIG_TFM_USE_TRUSTZONE>
         $<$<BOOL:${TFM_MULTI_CORE_TOPOLOGY}>:TFM_MULTI_CORE_TOPOLOGY>
         $<$<BOOL:${CONFIG_TFM_PARTITION_META}>:CONFIG_TFM_PARTITION_META>
